// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Select a field currently selected"
              error={true}
              onChange={[Function]}
              value="0"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={true}
            >
              Please select a field to search
            </WithStyles(ForwardRef(FormHelperText))>
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography)) />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Select a field to search on",
                "combiner": null,
                "hint": "Select a field to search on",
                "map": "",
                "order": 0,
                "title": "Select a field",
                "type": "TextField",
                "validation": Array [],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="0"
            value=""
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider)) />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`AdvancedSearchRow should render default view with styles 1`] = `
<AdvancedSearchRow
  classes={
    Object {
      "advancedSearchCombiner": "AdvancedSearchRow-advancedSearchCombiner-3",
      "advancedSearchRowDeleteButton": "AdvancedSearchRow-advancedSearchRowDeleteButton-2",
      "autoWidth": "AdvancedSearchRow-autoWidth-1",
      "mobileInputRow": "AdvancedSearchRow-mobileInputRow-5",
      "mobileRowSpacer": "AdvancedSearchRow-mobileRowSpacer-4",
    }
  }
  disabledFields={Array []}
  onSearchRowChange={[MockFunction]}
  onSearchRowDelete={[MockFunction]}
  rowIndex={0}
  searchField="0"
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
        "width": [Function],
      },
      "direction": "ltr",
      "mixins": Object {
        "gutters": [Function],
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "overrides": Object {},
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fafafa",
          "paper": "#fff",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#d32f2f",
          "light": "#e57373",
          "main": "#f44336",
        },
        "getContrastText": [Function],
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#d5d5d5",
          "A200": "#aaaaaa",
          "A400": "#303030",
          "A700": "#616161",
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#1976d2",
          "light": "#64b5f6",
          "main": "#2196f3",
        },
        "primary": Object {
          "contrastText": "#fff",
          "dark": "#303f9f",
          "light": "#7986cb",
          "main": "#3f51b5",
        },
        "secondary": Object {
          "contrastText": "#fff",
          "dark": "#c51162",
          "light": "#ff4081",
          "main": "#f50057",
        },
        "success": Object {
          "contrastText": "rgba(0, 0, 0, 0.87)",
          "dark": "#388e3c",
          "light": "#81c784",
          "main": "#4caf50",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "hint": "rgba(0, 0, 0, 0.38)",
          "primary": "rgba(0, 0, 0, 0.87)",
          "secondary": "rgba(0, 0, 0, 0.54)",
        },
        "tonalOffset": 0.2,
        "type": "light",
        "warning": Object {
          "contrastText": "rgba(0, 0, 0, 0.87)",
          "dark": "#f57c00",
          "light": "#ffb74d",
          "main": "#ff9800",
        },
      },
      "props": Object {},
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.5,
        },
        "body2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 400,
          "letterSpacing": "0.01071em",
          "lineHeight": 1.43,
        },
        "button": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.02857em",
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "caption": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.03333em",
          "lineHeight": 1.66,
        },
        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "6rem",
          "fontWeight": 300,
          "letterSpacing": "-0.01562em",
          "lineHeight": 1.167,
        },
        "h2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3.75rem",
          "fontWeight": 300,
          "letterSpacing": "-0.00833em",
          "lineHeight": 1.2,
        },
        "h3": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.167,
        },
        "h4": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "2.125rem",
          "fontWeight": 400,
          "letterSpacing": "0.00735em",
          "lineHeight": 1.235,
        },
        "h5": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.334,
        },
        "h6": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 500,
          "letterSpacing": "0.0075em",
          "lineHeight": 1.6,
        },
        "htmlFontSize": 16,
        "overline": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.08333em",
          "lineHeight": 2.66,
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "round": [Function],
        "subtitle1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.75,
        },
        "subtitle2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.00714em",
          "lineHeight": 1.57,
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
  value=""
/>
`;

exports[`AdvancedSearchRow should render input component and props 1`] = `
<div
  disabled={true}
  fullWidth={true}
  id="searchField"
  name="searchField0"
  type="search"
  value=""
/>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={false}
            />
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))>
            contains
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={
              Array [
                "all",
                0,
              ]
            }
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider)) />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(ForwardRef(FormControl))
            fullWidth={true}
          >
            <WithStyles(ForwardRef(Select))
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(ForwardRef(MenuItem))
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(Divider))
                key="1"
              />
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
            <WithStyles(ForwardRef(FormHelperText))
              error={false}
            />
          </WithStyles(ForwardRef(FormControl))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs="auto"
        >
          <WithStyles(ForwardRef(Typography))>
            contains
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(ForwardRef(Grid))>
        <Hidden
          mdUp={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Divider)) />
          </WithStyles(ForwardRef(Grid))>
        </Hidden>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;
